fix(operational): reduce padding of metric widgets

--- a/app/views/dashboards/operation/_partials/overall_metric_counts.html
+++ b/app/views/dashboards/operation/_partials/overall_metric_counts.html
@@ -2,7 +2,7 @@
 <div class="row no-gutter">
   <!-- start total -->
   <div class="col-xs-6 col-sm-4 b-r b-l b-t b-b" title="Total Service Requests">
-    <div class="padding">
+    <div class="p-a-sm">
       <div class="text-center">
         <h2 class="text-center _600 m-t-md">
           {{ operations.overall.count | number: 0 }}
@@ -15,7 +15,7 @@
 
   <!-- start pending -->
   <div class="col-xs-6 col-sm-4 b-r b-t b-b" title="Pending Service Requests">
-    <div class="padding">
+    <div class="p-a-sm">
       <div class="text-center">
         <h2 class="text-center _600 m-t-md">
           {{ operations.overall.pending | number: 0 }}
@@ -28,7 +28,7 @@
 
   <!-- start resolved -->
   <div class="col-xs-6 col-sm-4 b-r b-t b-b" title="Resolved Service Requests">
-    <div class="padding">
+    <div class="p-a-sm">
       <div class="text-center">
         <h2 class="text-center _600 m-t-md">
           {{ operations.overall.resolved | number: 0 }}
