fix(menu): add reports permissions

--- a/app/views/_partials/aside.html
+++ b/app/views/_partials/aside.html
@@ -65,7 +65,7 @@
         </li>
         <li
           ui-sref-active="active"
-          show-if-has-any-permit="jurisdiction:view, servicegroup:view, service:view, priority:view, status:view, user:view, role:view"
+          show-if-has-any-permit="view:overview report"
         >
           <a ui-sref="app.overviews" title="Overviews">
             <span class="nav-icon">
@@ -76,7 +76,7 @@
         </li>
         <li
           ui-sref-active="active"
-          show-if-has-any-permit="jurisdiction:view, servicegroup:view, service:view, priority:view, status:view, user:view, role:view"
+          show-if-has-any-permit="view:standing report"
         >
           <a ui-sref="app.standings" title="Standings">
             <span class="nav-icon">
@@ -87,7 +87,7 @@
         </li>
         <li
           ui-sref-active="active"
-          show-if-has-any-permit="jurisdiction:view, servicegroup:view, service:view, priority:view, status:view, user:view, role:view"
+          show-if-has-any-permit="view:performance report"
         >
           <a ui-sref="app.performances" title="Performances">
             <span class="nav-icon">
@@ -96,17 +96,11 @@
             <span class="nav-text">Performances</span>
           </a>
         </li>
-        <!-- <li ui-sref-active="active" show-if-has-any-permit="jurisdiction:view, servicegroup:view, service:view, priority:view, status:view, user:view, role:view">
-                    <a ui-sref="app.comparison" title="Comparison">
-                  <span class="nav-icon">
-                    <i class="ion-stats-bars"></i>
-                  </span>
-                  <span class="nav-text">Comparison</span>
-                </a>
-                </li> -->
 
-        <!-- operation navigation menu -->
-        <li ui-sref-active="active">
+        <li
+          ui-sref-active="active"
+          show-if-has-any-permit="view:operational report"
+        >
           <a ui-sref="app.operations" title="Operations Reports">
             <span class="nav-icon">
               <i class="ion-ios-people"></i>
@@ -114,7 +108,6 @@
             <span class="nav-text">Operations</span>
           </a>
         </li>
-        <!-- end operation navigation menu -->
 
         <li
           ui-sref-active="active"
