--- a/app/views/dashboards/operation/_partials/overall_time_summary.html
+++ b/app/views/dashboards/operation/_partials/overall_time_summary.html
@@ -59,7 +59,6 @@
     <!-- start body -->
     <div>
       <!-- start overall stats -->
-
       <div class="row no-gutter">
         <!-- start avg assign time -->
         <div class="col-xs-6 col-sm-2 b-r" title="Average Assign Time">
@@ -181,29 +180,29 @@
         </div>
         <!-- end avg approval time  -->
 
-        <!-- start approved -->
-        <div class="col-xs-6 col-sm-2 b-l" title="Average Late Time">
+        <!-- start avg work time -->
+        <div class="col-xs-6 col-sm-2 b-r" title="Average Work Time">
           <div class="padding">
             <div class="text-center">
               <h3 class="text-center _600 m-t-md">
-                <span title="Average Late Time - Days Spent">
-                  {{ operations.overall.lateTime.average.days }}
+                <span title="Average Work Time - Days Spent">
+                  {{ operations.overall.workTime.average.days }}
                   <span class="text-muted text-xs">days</span>
                 </span>
-                <span title="Average Late Time - Hours Spent">
-                  {{ operations.overall.lateTime.average.hours }}
+                <span title="Average Work Time - Hours Spent">
+                  {{ operations.overall.workTime.average.hours }}
                   <span class="text-muted text-xs">hrs</span>
                 </span>
-                <span title="Average Late Time - Minutes Spent">
-                  {{ operations.overall.lateTime.average.minutes }}
+                <span title="Average Work Time - Minutes Spent">
+                  {{ operations.overall.workTime.average.minutes }}
                   <span class="text-muted text-xs">mins</span>
                 </span>
               </h3>
-              <p class="text-muted m-b-md">Average Late Time</p>
+              <p class="text-muted m-b-md">Average Work Time</p>
             </div>
           </div>
         </div>
-        <!-- end approved  -->
+        <!-- end avg work time -->
       </div>
       <!-- end jurisdiction performance summary -->
 
