--- a/app/views/dashboards/operation/_partials/overall_summary.html
+++ b/app/views/dashboards/operation/_partials/overall_summary.html
@@ -62,6 +62,29 @@
 
       <!-- start jurisdiction performance summary -->
       <div class="row no-gutter">
+        <!-- start waiting -->
+        <div
+          class="col-xs-6 col-sm-2 b-r"
+          title="Service Requests in Waiting State"
+        >
+          <div class="padding">
+            <!-- <div>
+             <span
+               class="pull-right text-xs"
+               ng-class="operations.overall.percentagePending <= 50 ? 'text-success' : 'text-danger'"
+               >{{ operations.overall.percentagePending | number: 2 }}%</span
+             >
+           </div> -->
+            <div class="text-center">
+              <h4 class="text-center _600 m-t-md">
+                {{ operations.overall.new | number: 0 }}
+              </h4>
+              <p class="text-muted m-b-md">Waiting</p>
+            </div>
+          </div>
+        </div>
+        <!-- end waiting -->
+
         <!-- start assigned -->
         <div
           class="col-xs-6 col-sm-2 b-r"
@@ -158,22 +181,6 @@
                 {{ operations.overall.approved | number: 0 }}
               </h4>
               <p class="text-muted m-b-md">Approved</p>
-            </div>
-          </div>
-        </div>
-        <!-- end approved  -->
-
-        <!-- start approved -->
-        <div
-          class="col-xs-6 col-sm-2 b-l"
-          title="Service Requests which are Late"
-        >
-          <div class="padding">
-            <div class="text-center">
-              <h4 class="text-center _600 m-t-md">
-                {{ operations.overall.late | number: 0 }}
-              </h4>
-              <p class="text-muted m-b-md">Late</p>
             </div>
           </div>
         </div>
