--- a/app/views/dashboards/operation/index.html
+++ b/app/views/dashboards/operation/index.html
@@ -79,10 +79,10 @@
     <!-- end services summary -->
 
     <!-- start material used summary -->
-    <!-- <ng-include
-      ng-if="operations.services  && operations.services.length > 0"
+    <ng-include
+      ng-if="operations.items  && operations.items.length > 0"
       src="'views/dashboards/operation/_partials/material_used_summary.html'"
-    ></ng-include> -->
+    ></ng-include>
     <!-- end material used summary -->
 
     <!-- <hr> -->
