fix(performance): hide widget base on if services array is empty or not

--- a/app/views/dashboards/performance/index.html
+++ b/app/views/dashboards/performance/index.html
@@ -33,7 +33,7 @@
   <div class="app-body-inner">
     <!-- start jurisdiction summary and (ttr & att) -->
     <ng-include
-      ng-if="performances && performances.overall"
+      ng-if="performances.services  && performances.services.length > 0"
       src="'views/dashboards/performance/_partials/jurisdiction_summary.html'"
     ></ng-include>
     <!-- end jurisdiction summary and (ttr & att) -->
@@ -43,7 +43,7 @@
       <div class="col-xs-12 col-sm-6 col-md-6">
         <!-- start of area overall summary -->
         <ng-include
-          ng-if="performances && performances.overall"
+          ng-if="performances.services  && performances.services.length > 0"
           src="'views/dashboards/performance/_partials/overall_summary.html'"
         ></ng-include>
         <!-- end of area overall summary -->
@@ -78,27 +78,30 @@
       <!-- start of leader's board section -->
       <div class="row m-t-lg">
         <div class="col-sm-12 col-md-5 col-lg-5">
-          <!-- start of staff leaderboard -->
+          <!-- start of staff leader board -->
           <ng-include
             ng-if="performances.operators"
             src="'views/dashboards/_partials/service_request_leaderboard.html'"
           />
-          <!-- end of staff leaderboard -->
+          <!-- end of staff leader board -->
         </div>
         <div class="col-sm-12 col-md-5 col-lg-5 offset-md-1">
-          <!-- start of area leaderboard -->
+          <!-- start of area leader board -->
           <ng-include
             ng-if="performances.jurisdictions"
             src="'views/dashboards/_partials/service_request_area_leaderboard.html'"
           />
-          <!-- end of area leaderboard -->
+          <!-- end of area leader board -->
         </div>
       </div>
       <!-- end of leader's board section -->
     </div>
 
     <!-- start no data description -->
-    <div ng-if="!performances.overall" class="row-col h-v">
+    <div
+      ng-if="performances.services  && performances.services.length === 0"
+      class="row-col h-v"
+    >
       <div class="row-cell v-m">
         <div class="text-center col-sm-6 offset-sm-3 p-y-lg">
           <p class="text-muted m-y-lg">
