fix(performance): use  service times and not overall time in resolveTime

--- a/app/views/dashboards/performance/_partials/services_summary.html
+++ b/app/views/dashboards/performance/_partials/services_summary.html
@@ -144,8 +144,8 @@
                 </td>
                 <td>
                   <span>
-                    {{ performances.overall.resolveTime.average.hours +
-                    performances.overall.resolveTime.average.days * 24 }}
+                    {{ service.resolveTime.average.hours +
+                    service.resolveTime.average.days * 24 }}
                     <span class="text-muted text-xs">hrs</span>
                   </span>
                   <span>
