--- a/app/views/dashboards/performance/_partials/overall_summary.html
+++ b/app/views/dashboards/performance/_partials/overall_summary.html
@@ -14,18 +14,20 @@
       <!-- start time filters -->
       <ul class="nav">
         <!-- start export -->
-        <li class="nav-item inline">
+        <!-- <li class="nav-item inline">
           <a
             title="Click To Export"
             class="btn btn-xs rounded white"
             aria-expanded="false"
-            ng-csv="export('services')"
+            ng-csv="export('overall')"
             csv-header="exports.services.headers"
-            filename="services_overview_reports_{{filters.startedAt | date:settings.dateFormat}}_{{filters.endedAt | date:settings.dateFormat}}.csv"
+            filename="performance_overall_summary_report_{{
+              filters.startedAt | date: settings.dateFormat
+            }}_{{ filters.endedAt | date: settings.dateFormat }}.csv"
           >
             Export
           </a>
-        </li>
+        </li> -->
         <!-- end export -->
 
         <!-- start date filters -->
@@ -65,7 +67,7 @@
           <div class="p-a-sm">
             <div class="text-center">
               <h4 class="text-center _600 m-t-md">
-                {{performances.overall.count | number:0}}
+                {{ performances.overall.count | number: 0 }}
               </h4>
               <p class="text-muted m-b-md">Total</p>
             </div>
@@ -80,12 +82,12 @@
               <span
                 class="pull-right text-xs"
                 ng-class="performances.overall.percentagePending <= 50 ? 'text-success' : 'text-danger'"
-                >{{performances.overall.percentagePending | number:2}}%</span
+                >{{ performances.overall.percentagePending | number: 2 }}%</span
               >
             </div>
             <div class="text-center">
               <h4 class="text-center _600 m-t-md">
-                {{performances.overall.pending | number:0}}
+                {{ performances.overall.pending | number: 0 }}
               </h4>
               <p class="text-muted m-b-md">Pending</p>
             </div>
@@ -103,12 +105,13 @@
               <span
                 class="pull-right text-xs"
                 ng-class="performances.overall.percentageResolved >= 50 ? 'text-success' : 'text-danger'"
-                >{{performances.overall.percentageResolved | number:2}}%</span
+                >{{ performances.overall.percentageResolved | number: 2
+                }}%</span
               >
             </div>
             <div class="text-center">
               <h4 class="text-center _600 m-t-md">
-                {{performances.overall.resolved | number:0}}
+                {{ performances.overall.resolved | number: 0 }}
               </h4>
               <p class="text-muted m-b-md">Resolved</p>
             </div>
@@ -126,12 +129,12 @@
               <span
                 class="pull-right text-xs"
                 ng-class="performances.overall.percentageLate > 0 ? 'text-danger' : 'text-success'"
-                >{{performances.overall.percentageLate | number:2}}%</span
+                >{{ performances.overall.percentageLate | number: 2 }}%</span
               >
             </div>
             <div class="text-center">
               <h4 class="text-center _600 m-t-md">
-                {{performances.overall.late | number:0}}
+                {{ performances.overall.late | number: 0 }}
               </h4>
               <p class="text-muted m-b-md">Late</p>
             </div>
@@ -147,7 +150,7 @@
           <div class="p-a-sm">
             <div class="text-center">
               <h4 class="text-center _600 m-t-md">
-                {{performances.overall.late | number:0}}
+                {{ performances.overall.late | number: 0 }}
               </h4>
               <p class="text-muted m-b-md">Escallated</p>
             </div>
