--- a/app/views/dashboards/performance/_partials/pipeline_summary.html
+++ b/app/views/dashboards/performance/_partials/pipeline_summary.html
@@ -14,7 +14,7 @@
       <!-- start time filters -->
       <ul class="nav">
         <!-- start export -->
-        <li class="nav-item inline">
+        <!-- <li class="nav-item inline">
           <a
             title="Click To Export"
             class="btn btn-xs rounded white"
@@ -27,7 +27,7 @@
           >
             Export
           </a>
-        </li>
+        </li> -->
         <!-- end export -->
 
         <!-- start date filters -->
