fix: add border right after verification time widget

--- a/app/views/dashboards/operation/_partials/overall_time_summary.html
+++ b/app/views/dashboards/operation/_partials/overall_time_summary.html
@@ -133,7 +133,7 @@
         <!-- end avg completion time -->
 
         <!-- start avg verification time -->
-        <div class="col-xs-6 col-sm-2" title="Average Verification Time">
+        <div class="col-xs-6 col-sm-2 b-r" title="Average Verification Time">
           <div class="padding">
             <div class="text-center">
               <h3 class="text-center _600 m-t-md">
@@ -157,7 +157,7 @@
         <!-- end avg verification time  -->
 
         <!-- start avg approval time -->
-        <div class="col-xs-6 col-sm-2 b-l" title="Average Approval Time">
+        <div class="col-xs-6 col-sm-2 b-r" title="Average Approval Time">
           <div class="padding">
             <div class="text-center">
               <h3 class="text-center _600 m-t-md">
@@ -181,7 +181,7 @@
         <!-- end avg approval time  -->
 
         <!-- start avg work time -->
-        <div class="col-xs-6 col-sm-2 b-r" title="Average Work Time">
+        <div class="col-xs-6 col-sm-2" title="Average Work Time">
           <div class="padding">
             <div class="text-center">
               <h3 class="text-center _600 m-t-md">
