--- a/app/views/dashboards/trending/index.html
+++ b/app/views/dashboards/trending/index.html
@@ -34,6 +34,10 @@
     <ng-include
       src="'views/dashboards/trending/_partials/hours_per_days_heatmap.html'"
     ></ng-include>
+
+    <ng-include
+      src="'views/dashboards/trending/_partials/month_per_year_trending.html'"
+    ></ng-include>
   </div>
 </div>
 <!-- end app body -->
