feat(trending): add quarter per year visualization

--- a/app/views/dashboards/trending/index.html
+++ b/app/views/dashboards/trending/index.html
@@ -38,6 +38,10 @@
     <ng-include
       src="'views/dashboards/trending/_partials/month_per_year_trending.html'"
     ></ng-include>
+
+    <ng-include
+      src="'views/dashboards/trending/_partials/quarter_per_year.html'"
+    ></ng-include>
   </div>
 </div>
 <!-- end app body -->
